feat: fonts + terminal + user-dirs

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -5,3 +5,11 @@ packages:
     - 'lazygit'
     - 'downgrade'
     - 'hyprland'
+    - 'xdg-user-dirs'
+    - 'xdg-user-dirs-gtk'
+    - 'xdg-desktop-portal-hyprland'
+    - 'kitty'
+    - 'ttf-firacode-nerd'
+    - 'noto-fonts'
+    - 'noto-fonts-cjk'
+    - 'noto-fonts-emoji'
