--- a/home/private_dot_config/hypr/keybindings.conf
+++ b/home/private_dot_config/hypr/keybindings.conf
@@ -20,7 +20,7 @@ bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
 bind = Alt, F4, exec, $scrPath/dontkillsteam.sh # close focused window
 bind = $mainMod, Delete, exit, # kill hyprland session
 bind = $mainMod, W, togglefloating, # toggle the window between focus and float
-bind = Alt, Return, fullscreen, # toggle the window between focus and fullscreen
+bind = $mainMod ALT, return, fullscreen, 1 # toggle the window on focus to fullscreen
 bind = $mainMod, L, exec, loginctl lock-session # lock screen
 bind = $mainMod, O, exec, hyprctl dispatch dpms on # blank screen
 bind = $mainMod, T, exec, hyprctl dispatch dpms off # blank screen
@@ -29,7 +29,7 @@ bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
 bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar
 
 # Application shortcuts
-bind = $mainMod, T, exec, $term # launch terminal emulator
+bind = $mainMod, return, exec, $term # launch terminal emulator
 bind = $mainMod, E, exec, $file # launch file manager
 bind = $mainMod, C, exec, $editor # launch text editor
 bind = $mainMod, F, exec, $browser # launch web browser
@@ -150,7 +150,7 @@ bindm = $mainMod, Z, movewindow
 bindm = $mainMod, X, resizewindow
 
 # Move/Switch to special workspace (scratchpad)
-bind = $mainMod+Alt, S, movetoworkspacesilent, special
+bind = $mainMod SHIFT, S, movetoworkspacesilent, special
 bind = $mainMod, S, togglespecialworkspace,
 
 # Toggle focused window split
