--- a/home/private_dot_config/hypr/keybindings.conf
+++ b/home/private_dot_config/hypr/keybindings.conf
@@ -16,8 +16,8 @@ $browser = firefox-developer-edition
 
 # Window/Session actions
 bindd = $mainMod+Shift, P,Color Picker , exec, hyprpicker -a # Pick color (Hex) >> clipboard# 
-bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
-bind = Alt, F4, exec, $scrPath/dontkillsteam.sh # close focused window
+bind = $mainMod, Q, exec, hyprctl dispatch killactive "" # close focused window
+bind = Alt, F4, exec, hyprctl dispatch killactive "" # close focused window
 bind = $mainMod, Delete, exit, # kill hyprland session
 bind = $mainMod, W, togglefloating, # toggle the window between focus and float
 bind = $mainMod ALT, return, fullscreen, 1 # toggle the window on focus to fullscreen
