chore(packages): add vscode

--- a/home/private_dot_config/hypr/keybindings.conf
+++ b/home/private_dot_config/hypr/keybindings.conf
@@ -10,7 +10,7 @@ $mainMod = Super # super / meta / windows key
 
 # Assign apps
 $term = kitty
-$editor = codium --ozone-platform-hint=wayland --disable-gpu
+$editor = code --ozone-platform-hint=wayland --disable-gpu
 $file = nautilus
 $browser = firefox-developer-edition
 
