chore(packages): networkmanager packages

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -4,6 +4,11 @@ packages:
     # archlinux
     - 'downgrade'
 
+    # network
+    - 'networkmanager'
+    - 'nm-connection-editor'
+    - 'network-manager-applet'
+
     # dm
     - 'ly'
     
