--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -18,7 +18,7 @@ monitor = ,preferred,auto,auto
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 exec-once = dbus-update-activation-environment --systemd --all # for XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
-# exec-once = $scrPath/polkitkdeauth.sh # authentication dialogue for GUI apps
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # authentication dialogue for GUI apps
 # exec-once = hypridle # start the idle daemon
 # exec-once = waybar # launch the system bar
 # exec-once = blueman-applet # systray app for Bluetooth
