chore(packages): add nautilus

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -36,6 +36,7 @@ packages:
     - 'kitty'
     - 'firefox-developer-edition'
     - 'visual-studio-code-bin'
+    - 'nautilus'
 
     - 'brightnessctl'
     - 'fastfetch'
