--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -45,6 +45,7 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = MOZ_ENABLE_WAYLAND,1
 env = GDK_SCALE,1
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/gcr/ssh
 
 
 # █ █▄░█ █▀█ █░█ ▀█▀
