feat(hyprland): support for swallow

--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -105,6 +105,8 @@ misc {
     disable_splash_rendering = true
     force_default_wallpaper = 0
     focus_on_activate = true
+    enable_swallow = true
+    swallow_regex = ^(kitty)$
 }
 
 xwayland {
