chore(packages): openvpn

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -8,6 +8,7 @@ packages:
     - 'networkmanager'
     - 'nm-connection-editor'
     - 'network-manager-applet'
+    - 'networkmanager-openvpn'
 
     # audio
     - 'pipewire'
