chore(packages): add wireguard userspace utilities

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -9,6 +9,7 @@ packages:
     - 'nm-connection-editor'
     - 'network-manager-applet'
     - 'networkmanager-openvpn'
+    - 'wireguard-tools'
 
     # audio
     - 'pipewire'
