chore: support for encryption

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -44,6 +44,7 @@ packages:
     - 'seahorse'
     - 'gnome-keyring'
     - 'polkit-gnome'
+    - 'age'
     
     - 'kitty'
     - 'firefox-developer-edition'
