--- a/home/.chezmoidata/services.yaml
+++ b/home/.chezmoidata/services.yaml
@@ -2,5 +2,6 @@ services:
   linux:
     system:
       - 'ly.service'
+      - 'swayosd-libinput-backend.service'
     user:
       - 'gcr-ssh-agent.socket'
