--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ exec-once = dbus-update-activation-environment --systemd --all # for XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # authentication dialogue for GUI apps
 exec-once = hypridle # start the idle daemon
+exec-once = swayosd-server # OSD server
 # exec-once = waybar # launch the system bar
 # exec-once = blueman-applet # systray app for Bluetooth
 # exec-once = nm-applet --indicator # systray app for Network/Wifi
