--- a/home/private_dot_config/hypr/keybindings.conf
+++ b/home/private_dot_config/hypr/keybindings.conf
@@ -41,13 +41,10 @@ bind = $mainMod, Tab, exec, pkill -x rofi || $scrPath/rofilaunch.sh w # launch w
 bind = $mainMod+Shift, E, exec, pkill -x rofi || $scrPath/rofilaunch.sh f # launch file explorer
 
 # Audio control
-# bindl  = , F10, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
-# bindel = , F11, exec, $scrPath/volumecontrol.sh -o d # decrease volume
-# bindel = , F12, exec, $scrPath/volumecontrol.sh -o i # increase volume
-bindl  = , XF86AudioMute, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
-bindl  = , XF86AudioMicMute, exec, $scrPath/volumecontrol.sh -i m # toggle microphone mute
-bindel = , XF86AudioLowerVolume, exec, $scrPath/volumecontrol.sh -o d # decrease volume
-bindel = , XF86AudioRaiseVolume, exec, $scrPath/volumecontrol.sh -o i # increase volume
+bindl  = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle # toggle audio mute
+bindl  = , XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle # toggle microphone mute
+bindel = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower # decrease volume
+bindel = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise # increase volume
 
 # Media control
 bindl  = , XF86AudioPlay, exec, playerctl play-pause # toggle between media play and pause
@@ -56,8 +53,8 @@ bindl  = , XF86AudioNext, exec, playerctl next # media next
 bindl  = , XF86AudioPrev, exec, playerctl previous # media previous
 
 # Brightness control
-bindel = , XF86MonBrightnessUp, exec, $scrPath/brightnesscontrol.sh i # increase brightness
-bindel = , XF86MonBrightnessDown, exec, $scrPath/brightnesscontrol.sh d # decrease brightness
+bindel = , XF86MonBrightnessUp, exec, swayosd-client --brightness +10 # increase brightness
+bindel = , XF86MonBrightnessDown, exec, swayosd-client --brightness -10 # decrease brightness
 
 # Move between grouped windows
 bind = $mainMod CTRL , H, changegroupactive, b
