feat: setup app launcher (anyrun) In the future could be cool to have a plugin for spawning ssh session

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -40,6 +40,9 @@ packages:
     - 'xdg-user-dirs-gtk'
     - 'xdg-desktop-portal-hyprland'
 
+    # launcher
+    - 'anyrun-git'
+
     # secrets
     - 'seahorse'
     - 'gnome-keyring'
