--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -21,6 +21,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # authentication dialogue for GUI apps
 exec-once = hypridle # start the idle daemon
 exec-once = swayosd-server # OSD server
+exec-once = walker --gapplication-service # start the walker daemon
 # exec-once = waybar # launch the system bar
 # exec-once = blueman-applet # systray app for Bluetooth
 # exec-once = nm-applet --indicator # systray app for Network/Wifi
