chore(packages): add discord and libqalculate

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -70,6 +70,8 @@ packages:
     - 'gnome-font-viewer'
     - 'rsync'
     - 'swayosd-git'
+    - 'libqalculate'
+    - 'discord'
 
     # gtk
     - 'gtk4'
