--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -21,13 +21,13 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # authentication dialogue for GUI apps
 exec-once = hypridle # start the idle daemon
 exec-once = swayosd-server # OSD server
+exec-once = hyprpaper # wallpapers
 # exec-once = waybar # launch the system bar
 # exec-once = blueman-applet # systray app for Bluetooth
 # exec-once = nm-applet --indicator # systray app for Network/Wifi
 # exec-once = dunst # start notification demon
 # exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 # exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
-# exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
 # exec-once = $scrPath/batterynotify.sh # battery notification
 
 
