feat(kanata): woking azerty symbol layer

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -42,6 +42,9 @@ packages:
     - 'xdg-user-dirs-gtk'
     - 'xdg-desktop-portal-hyprland'
 
+    # keyboard
+    - 'kanata-bin'
+
     # launcher
     - 'anyrun-git'
 
