feat(waybar): start applets

--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -22,9 +22,9 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # authenti
 exec-once = hypridle # start the idle daemon
 exec-once = swayosd-server # OSD server
 exec-once = hyprpaper # wallpapers
-# exec-once = waybar # launch the system bar
-# exec-once = blueman-applet # systray app for Bluetooth
-# exec-once = nm-applet --indicator # systray app for Network/Wifi
+exec-once = waybar # launch the system bar
+exec-once = blueman-applet # systray app for Bluetooth
+exec-once = nm-applet --indicator # systray app for Network/Wifi
 exec-once = kanata # start the keyboard daemon
 # exec-once = dunst # start notification demon
 # exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
