--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -122,7 +122,7 @@ xwayland {
 source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/windowrules.conf
-# source = ~/.config/hypr/themes/common.conf # shared theme settings
+source = ~/.config/hypr/theme.conf # shared theme settings
 # source = ~/.config/hypr/themes/theme.conf # theme specific settings
 # source = ~/.config/hypr/themes/colors.conf # wallbash color override
 source = ~/.config/hypr/monitors.conf
