--- a/home/private_dot_config/hypr/keybindings.conf
+++ b/home/private_dot_config/hypr/keybindings.conf
@@ -61,10 +61,8 @@ bind = $mainMod CTRL , H, changegroupactive, b
 bind = $mainMod CTRL , L, changegroupactive, f
 
 # Screenshot/Screencapture
-bind = $mainMod, P, exec, $scrPath/screenshot.sh s # partial screenshot capture
-bind = $mainMod+Ctrl, P, exec, $scrPath/screenshot.sh sf # partial screenshot capture (frozen screen)
-bind = $mainMod+Alt, P, exec, $scrPath/screenshot.sh m # monitor screenshot capture
-bind = , Print, exec, $scrPath/screenshot.sh p # all monitors screenshot capture
+bind = $mainMod, P, exec, grimblast --freeze copy area # partial screenshot capture
+bind = , Print, exec, grimblast --freeze copy screen # all monitors screenshot capture
 
 # Custom scripts
 bind = $mainMod+Alt, G, exec, $scrPath/gamemode.sh # disable hypr effects for gamemode
