chore(packages): add dunst

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -66,6 +66,9 @@ packages:
     # screenshot
     - 'grimblast-git'
 
+    # notifications
+    - 'dunst'
+
     # docker
     - 'docker'
     - 'docker-compose'
