chore(packages): add `ttf-mononoki-nerd`

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -31,6 +31,7 @@ packages:
     - 'noto-fonts-emoji'
     - 'ttf-firacode-nerd'
     - 'ttf-jetbrains-mono-nerd'
+    - 'ttf-mononoki-nerd'
 
     # hyprland ecosystem
     - 'hyprland'
