--- a/home/private_dot_config/hypr/theme.conf
+++ b/home/private_dot_config/hypr/theme.conf
@@ -2,12 +2,28 @@ general {
     gaps_in = 3
     gaps_out = 5
     border_size = 2
-    col.active_border = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
-    col.inactive_border = rgba(b4befecc) rgba(6c7086cc) 45deg
+    col.active_border = rgba(dc8a78ff) rgba(8839efff) 45deg
+    col.inactive_border = rgba(7287fdcc) rgba(179299cc) 45deg
     layout = dwindle
+}
+
+group {
+    col.border_active = rgba(dc8a78ff) rgba(8839efff) 45deg
+    col.border_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
+    col.border_locked_active = rgba(dc8a78ff) rgba(8839efff) 45deg
+    col.border_locked_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
 }
 
 decoration {
     rounding = 5
     drop_shadow = false
+
+    blur {
+        enabled = yes
+        size = 6
+        passes = 3
+        new_optimizations = on
+        ignore_opacity = on
+        xray = false
+    }
 }
