chore(packages): add zoxide and eza

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -89,6 +89,8 @@ packages:
     - 'zsh-completions'
     - 'zsh-antidote'
     - 'starship'
+    - 'zoxide'
+    - 'eza'
 
     # utilities
     - 'colormake'
