--- a/home/private_dot_config/hypr/windowrules.conf
+++ b/home/private_dot_config/hypr/windowrules.conf
@@ -82,11 +82,18 @@ windowrulev2 = float,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
 windowrulev2 = float,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gkk
 windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
+
 # Messaging apps
+# -> Discord
 windowrulev2 = group set,class:^(discord)$
 windowrulev2 = workspace special,class:^(discord)$
+# -> Element
 windowrulev2 = group set always, class:^(Element)$
 windowrulev2 = workspace special, class:^(Element)$
+# -> Signal
+windowrulev2 = tile,class:^(Signal)$
+windowrulev2 = group set,class:^(Signal)$
+windowrulev2 = workspace special,class:^(Signal)$
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
