feat(cursor): support for bibata cursor

--- a/home/private_dot_config/hypr/theme.conf
+++ b/home/private_dot_config/hypr/theme.conf
@@ -1,3 +1,9 @@
+# Hyprcursor theme
+env = HYPRCURSOR_THEME,Bibata-Modern-Classic
+env = XCURSOR_THEME,Bibata-Modern-Classic
+env = HYPRCURSOR_SIZE,16
+env = XCURSOR_SIZE,16
+
 general {
     gaps_in = 3
     gaps_out = 5
