chore(packages): add hardware acceleration requirements

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -6,6 +6,10 @@ packages:
     - 'needrestart'
     - 'chrony'
 
+    # Hardware acceleration
+    - 'libva-mesa-driver'
+    - 'mesa-vdpau'
+
     # network
     - 'networkmanager'
     - 'networkmanager-dispatcher-chrony'
