chore(packages): add `traceroute` and `whois` networks utilities

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -17,6 +17,8 @@ packages:
     - 'network-manager-applet'
     - 'networkmanager-openvpn'
     - 'wireguard-tools'
+    - 'traceroute'
+    - 'whois'
 
     # audio
     - 'pipewire'
