fix(hypr): update config to latest version

--- a/home/private_dot_config/hypr/theme.conf
+++ b/home/private_dot_config/hypr/theme.conf
@@ -22,7 +22,6 @@ group {
 
 decoration {
     rounding = 5
-    drop_shadow = false
 
     blur {
         enabled = yes
@@ -31,5 +30,9 @@ decoration {
         new_optimizations = on
         ignore_opacity = on
         xray = false
+    }
+
+    shadow {
+        enabled = false
     }
 }
