--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -7,8 +7,7 @@ packages:
     - 'chrony'
 
     # Hardware acceleration
-    - 'libva-mesa-driver'
-    - 'mesa-vdpau'
+    - 'mesa'
 
     # network
     - 'networkmanager'
