feat(displays): add kanshi to disable internal screen when docked

--- a/home/private_dot_config/hypr/keybindings.conf
+++ b/home/private_dot_config/hypr/keybindings.conf
@@ -169,4 +169,4 @@ bind = $mainMod+Alt, agrave, movetoworkspacesilent, 10
 
 
 # Trigger when the switch is turning off
-bindl= , switch:on:Lid Switch, exec, systemctl suspend
+# bindl= , switch:on:Lid Switch, exec, systemctl suspend
