--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -27,6 +27,7 @@ exec-once = blueman-applet # systray app for Bluetooth
 exec-once = nm-applet --indicator # systray app for Network/Wifi
 exec-once = kanata # start the keyboard daemon
 exec-once = dunst # start notification demon
+exec-once = kanshi # start the dynamic display configuration daemon
 # exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 # exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 # exec-once = $scrPath/batterynotify.sh # battery notification
