chore(packages): add spotify

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -113,6 +113,7 @@ packages:
     - 'visual-studio-code-bin'
     - 'nautilus'
     - 'vlc'
+    - 'spotify-launcher'
 
     - 'brightnessctl'
     - 'fastfetch'
