chore(packages): add hyprland-qtutils

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -46,6 +46,7 @@ packages:
 
     # hyprland ecosystem
     - 'hyprland'
+    - 'hyprland-qtutils'
     - 'hyprlock'
     - 'hypridle'
     - 'hyprpaper'
