chore(packages): replace traceroute with mtr

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -16,7 +16,7 @@ packages:
     - 'network-manager-applet'
     - 'networkmanager-openvpn'
     - 'wireguard-tools'
-    - 'traceroute'
+    - 'mtr'
     - 'whois'
 
     # audio
