chore(packages): add arch-signoff

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -6,6 +6,9 @@ packages:
     - 'needrestart'
     - 'chrony'
 
+    # archlinux development
+    - 'arch-signoff'
+
     # Hardware acceleration
     - 'mesa'
 
