chore(packages): bluetooth support

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -21,6 +21,10 @@ packages:
     - 'wireguard-tools'
     - 'mtr'
     - 'whois'
+    
+    # Bluetooth
+    - 'bluez'
+    - 'bluez-utils'
 
     # audio
     - 'pipewire'
