chore(packages) add cinny (matrix client)

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -136,6 +136,7 @@ packages:
     - 'swayosd-git'
     - 'libqalculate'
     - 'discord'
+    - 'cinny-desktop-bin'
     - 'ldns'
     - 'pwgen'
     - 'termshark'
