feat(hyprland): update special apps Special apps goes to special workspace in grouped mode

--- a/home/private_dot_config/hypr/windowrules.conf
+++ b/home/private_dot_config/hypr/windowrules.conf
@@ -83,23 +83,29 @@ windowrulev2 = float,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloade
 windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
 
-# Messaging apps
+# Special workspace rules
 # -> Discord
 windowrulev2 = group set,class:^(discord)$
 windowrulev2 = workspace special,class:^(discord)$
 # -> Element
-windowrulev2 = group set always, class:^(Element)$
-windowrulev2 = workspace special, class:^(Element)$
+windowrulev2 = group set always, class:^(cinny)$
+windowrulev2 = workspace special, class:^(cinny)$
 # -> Signal
 windowrulev2 = tile,class:^(Signal)$
 windowrulev2 = group set,class:^(Signal)$
 windowrulev2 = workspace special,class:^(Signal)$
+# -> Spotify
+windowrulev2 = group set,class:^(Spotify)$
+windowrulev2 = workspace special,class:^(Spotify)$
+# -> Heynote
+windowrulev2 = group set,class:^(Heynote)$
+windowrulev2 = workspace special,class:^(Heynote)$
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
-layerrule = blur,rofi
-layerrule = ignorezero,rofi
+# layerrule = blur,anyrun
+# layerrule = ignorezero,anyrun
 layerrule = blur,notifications
 layerrule = ignorezero,notifications
 layerrule = blur,swaync-notification-window
