chore(packages): add wlogout

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -78,6 +78,9 @@ packages:
     # Status bar
     - 'waybar'
 
+    # Logout
+    - 'wlogout-git'
+
     # secrets
     - 'seahorse'
     - 'gnome-keyring'
