--- a/home/private_dot_config/waybar/config.jsonc
+++ b/home/private_dot_config/waybar/config.jsonc
@@ -1,15 +1,14 @@
 // -*- mode: jsonc -*-
 {
     "layer": "top",
-    "position": "top",  // Waybar position (top|bottom|left|right)
+    "position": "top", // Waybar position (top|bottom|left|right)
     "mod": "dock",
-    "height": 22  ,
+    "height": 22,
     // "width": 1280, // Waybar width
     "exclusive": true,
     "passthrough": false,
     "gtk-layer-shell": true,
     // "spacing": 4, // Gaps between modules (4px)
-
     // Choose the order of the modules
     "modules-left": [
         "custom/padd",
@@ -33,7 +32,6 @@
         "cpu",
         "memory",
         "custom/r_end",
-
         "custom/l_end",
         "backlight",
         "network",
@@ -42,13 +40,11 @@
         "pulseaudio#microphone",
         "custom/updates",
         "custom/r_end",
-
         "custom/l_end",
         "privacy",
         "tray",
         "battery",
         "custom/r_end",
-        
         "custom/l_end",
         "custom/cliphist",
         "custom/power",
@@ -63,8 +59,7 @@
         "on-click": "activate",
         "on-scroll-up": "hyprctl dispatch workspace -1",
         "on-scroll-down": "hyprctl dispatch workspace +1",
-        "persistent-workspaces": {
-        }
+        "persistent-workspaces": {}
     },
     "hyprland/window": {
         "format": "  {}",
@@ -81,7 +76,6 @@
         },
         "max-length": 50
     },
-
     "idle_inhibitor": {
         "format": "{icon}",
         "format-icons": {
@@ -116,13 +110,22 @@
         "interval": 10,
         "format": "󰍛 {usage}%",
         "format-alt": "{icon0}{icon1}{icon2}{icon3}",
-        "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
+        "format-icons": [
+            "▁",
+            "▂",
+            "▃",
+            "▄",
+            "▅",
+            "▆",
+            "▇",
+            "█"
+        ]
     },
     "memory": {
         "states": {
             "c": 90, // critical
             "h": 60, // high
-            "m": 30  // medium
+            "m": 30 // medium
         },
         "interval": 30,
         "format": "󰾆 {used}GB",
@@ -137,7 +140,17 @@
     "backlight": {
         "device": "intel_backlight",
         "format": "{icon} {percent}%",
-        "format-icons": ["", "", "", "", "", "", "", "", ""],
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            ""
+        ],
         "on-scroll-up": "brightnessctl set 1%+",
         "on-scroll-down": "brightnessctl set 1%-",
         "min-length": 6
@@ -159,14 +172,25 @@
         "format-connected": " {num_connections}",
         "format-connected-battery": "{icon} {num_connections}",
         // "format-connected-battery": "{icon} {device_alias}-{device_battery_percentage}%",
-        "format-icons": ["󰥇", "󰤾", "󰤿", "󰥀", "󰥁", "󰥂", "󰥃", "󰥄", "󰥅", "󰥆", "󰥈"],
+        "format-icons": [
+            "󰥇",
+            "󰤾",
+            "󰤿",
+            "󰥀",
+            "󰥁",
+            "󰥂",
+            "󰥃",
+            "󰥄",
+            "󰥅",
+            "󰥆",
+            "󰥈"
+        ],
         // "format-device-preference": [ "device1", "device2" ], // preference list deciding the displayed device If this config option is not defined or none of the devices in the list are connected, it will fall back to showing the last connected device.
         "tooltip-format": "{controller_alias}\n{num_connections} connected",
         "tooltip-format-connected": "{controller_alias}\n{num_connections} connected\n\n{device_enumerate}",
         "tooltip-format-enumerate-connected": "{device_alias}",
         "tooltip-format-enumerate-connected-battery": "{device_alias}\t{icon} {device_battery_percentage}%"
     },
-
     "pulseaudio": {
         "format": "{icon} {volume}",
         "format-muted": "󰸈",
@@ -183,7 +207,11 @@
             "phone": "",
             "portable": "",
             "car": "",
-            "default": ["󰕿", "󰖀", "󰕾"]
+            "default": [
+                "󰕿",
+                "󰖀",
+                "󰕾"
+            ]
         }
     },
     "pulseaudio#microphone": {
@@ -237,7 +265,19 @@
         "format-charging": " {capacity}%",
         "format-plugged": " {capacity}%",
         "format-alt": "{time} {icon}",
-        "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
+        "format-icons": [
+            "󰂎",
+            "󰁺",
+            "󰁻",
+            "󰁼",
+            "󰁽",
+            "󰁾",
+            "󰁿",
+            "󰂀",
+            "󰂁",
+            "󰂂",
+            "󰁹"
+        ]
     },
     "custom/cliphist": {
         "format": "{} ",
@@ -245,59 +285,50 @@
         "on-click": "sleep 0.1 && cliphist.sh c",
         "on-click-right": "sleep 0.1 && cliphist.sh d",
         "on-click-middle": "sleep 0.1 && cliphist.sh w",
-        "interval" : 86400, // once every day
+        "interval": 86400, // once every day
         "tooltip": true
     },
     "custom/power": {
         "format": "{}",
         "exec": "echo ; echo  logout",
-        "on-click": "logoutlaunch.sh 2",
-        "on-click-right": "logoutlaunch.sh 1",
-        "interval" : 86400, // once every day
+        "on-click": "wlogout",
+        "interval": 86400, // once every day
         "tooltip": true
     },
-
-
     // modules for padding //
     "custom/l_end": {
         "format": " ",
-        "interval" : "once",
+        "interval": "once",
         "tooltip": false
     },
-
     "custom/r_end": {
         "format": " ",
-        "interval" : "once",
+        "interval": "once",
         "tooltip": false
     },
-
     "custom/sl_end": {
         "format": " ",
-        "interval" : "once",
+        "interval": "once",
         "tooltip": false
     },
-
     "custom/sr_end": {
         "format": " ",
-        "interval" : "once",
+        "interval": "once",
         "tooltip": false
     },
-
     "custom/rl_end": {
         "format": " ",
-        "interval" : "once",
+        "interval": "once",
         "tooltip": false
     },
-
     "custom/rr_end": {
         "format": " ",
-        "interval" : "once",
+        "interval": "once",
         "tooltip": false
     },
-
     "custom/padd": {
         "format": "  ",
-        "interval" : "once",
+        "interval": "once",
         "tooltip": false
     }
 }
