--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ exec-once = hyprpaper # wallpapers
 exec-once = waybar # launch the system bar
 exec-once = blueman-applet # systray app for Bluetooth
 exec-once = nm-applet --indicator # systray app for Network/Wifi
-exec-once = kanata # start the keyboard daemon
+exec-once = kanata -q # start the keyboard daemon
 exec-once = dunst # start notification demon
 exec-once = kanshi # start the dynamic display configuration daemon
 # exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
