feat(kitty): notify when long command finish

--- a/home/private_dot_config/kitty/kitty.conf
+++ b/home/private_dot_config/kitty/kitty.conf
@@ -16,3 +16,4 @@ shell_integration no-cursor
 mouse_hide_wait 0.0
 enable_audio_bell no
 touch_scroll_multiplier 2.0
+notify_on_cmd_finish invisible
