feat(hyprland): set QEMU as float

--- a/home/private_dot_config/hypr/windowrules.conf
+++ b/home/private_dot_config/hypr/windowrules.conf
@@ -82,6 +82,7 @@ windowrulev2 = float,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
 windowrulev2 = float,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gkk
 windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
+windowrulev2 = float,class:^(Qemu-system-i386)$ # QEMU x86
 
 # Special workspace rules
 # -> Discord
