--- a/home/private_dot_config/hypr/theme.conf
+++ b/home/private_dot_config/hypr/theme.conf
@@ -8,16 +8,16 @@ general {
     gaps_in = 3
     gaps_out = 5
     border_size = 2
-    col.active_border = rgba(dc8a78ff) rgba(8839efff) 45deg
-    col.inactive_border = rgba(7287fdcc) rgba(179299cc) 45deg
+    col.active_border = rgba(dc8a78ff)
+    col.inactive_border = rgba(7287fdcc)
     layout = dwindle
 }
 
 group {
-    col.border_active = rgba(dc8a78ff) rgba(8839efff) 45deg
-    col.border_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
-    col.border_locked_active = rgba(dc8a78ff) rgba(8839efff) 45deg
-    col.border_locked_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
+    col.border_active = rgba(dc8a78ff)
+    col.border_inactive = rgba(7287fdcc)
+    col.border_locked_active = rgba(dc8a78ff)
+    col.border_locked_inactive = rgba(7287fdcc)
 }
 
 decoration {
