--- a/home/private_dot_config/hypr/windowrules.conf
+++ b/home/private_dot_config/hypr/windowrules.conf
@@ -4,103 +4,104 @@
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
-# windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
-# windowrulev2 = opacity 0.90 0.90,class:^(Brave-browser)$
-# windowrulev2 = opacity 0.80 0.80,class:^(code-oss)$
-# windowrulev2 = opacity 0.80 0.80,class:^(Code)$
-# windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
-# windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
-# windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
-# windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
-# windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
-# windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
-# windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
-# windowrulev2 = opacity 0.80 0.80,class:^(qt6ct)$
-# windowrulev2 = opacity 0.80 0.80,class:^(kvantummanager)$
-# windowrulev2 = opacity 0.80 0.70,class:^(org.pulseaudio.pavucontrol)$
-# windowrulev2 = opacity 0.80 0.70,class:^(blueman-manager)$
-# windowrulev2 = opacity 0.80 0.70,class:^(nm-applet)$
-# windowrulev2 = opacity 0.80 0.70,class:^(nm-connection-editor)$
-# windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
-# windowrulev2 = opacity 0.80 0.70,class:^(polkit-gnome-authentication-agent-1)$
-# windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.gtk)$
-# windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
-# windowrulev2 = opacity 0.70 0.70,class:^([Ss]team)$
-# windowrulev2 = opacity 0.70 0.70,class:^(steamwebhelper)$
-# windowrulev2 = opacity 0.70 0.70,class:^(Spotify)$
-# windowrulev2 = opacity 0.70 0.70,initialTitle:^(Spotify Free)$
-# windowrulev2 = opacity 0.70 0.70,initialTitle:^(Spotify Premium)$
+# windowrule = opacity 0.90 0.90,class:^(firefox)$
+# windowrule = opacity 0.90 0.90,class:^(Brave-browser)$
+# windowrule = opacity 0.80 0.80,class:^(code-oss)$
+# windowrule = opacity 0.80 0.80,class:^(Code)$
+# windowrule = opacity 0.80 0.80,class:^(code-url-handler)$
+# windowrule = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
+# windowrule = opacity 0.80 0.80,class:^(kitty)$
+# windowrule = opacity 0.80 0.80,class:^(org.kde.dolphin)$
+# windowrule = opacity 0.80 0.80,class:^(org.kde.ark)$
+# windowrule = opacity 0.80 0.80,class:^(nwg-look)$
+# windowrule = opacity 0.80 0.80,class:^(qt5ct)$
+# windowrule = opacity 0.80 0.80,class:^(qt6ct)$
+# windowrule = opacity 0.80 0.80,class:^(kvantummanager)$
+# windowrule = opacity 0.80 0.70,class:^(org.pulseaudio.pavucontrol)$
+# windowrule = opacity 0.80 0.70,class:^(blueman-manager)$
+# windowrule = opacity 0.80 0.70,class:^(nm-applet)$
+# windowrule = opacity 0.80 0.70,class:^(nm-connection-editor)$
+# windowrule = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
+# windowrule = opacity 0.80 0.70,class:^(polkit-gnome-authentication-agent-1)$
+# windowrule = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.gtk)$
+# windowrule = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
+# windowrule = opacity 0.70 0.70,class:^([Ss]team)$
+# windowrule = opacity 0.70 0.70,class:^(steamwebhelper)$
+# windowrule = opacity 0.70 0.70,class:^(Spotify)$
+# windowrule = opacity 0.70 0.70,initialTitle:^(Spotify Free)$
+# windowrule = opacity 0.70 0.70,initialTitle:^(Spotify Premium)$
 
-# windowrulev2 = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(hu.kramo.Cartridges)$ # Cartridges-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(com.obsproject.Studio)$ # Obs-Qt
-# windowrulev2 = opacity 0.80 0.80,class:^(gnome-boxes)$ # Boxes-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(vesktop)$ # Vesktop
-# windowrulev2 = opacity 0.80 0.80,class:^(discord)$ # Discord-Electron
-# windowrulev2 = opacity 0.80 0.80,class:^(WebCord)$ # WebCord-Electron
-# windowrulev2 = opacity 0.80 0.80,class:^(ArmCord)$ # ArmCord-Electron
-# windowrulev2 = opacity 0.80 0.80,class:^(app.drey.Warp)$ # Warp-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
-# windowrulev2 = opacity 0.80 0.80,class:^(yad)$ # Protontricks-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(Signal)$ # Signal-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(io.github.alainm23.planify)$ # planify-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
-# windowrulev2 = opacity 0.80 0.80,class:^(io.github.flattool.Warehouse)$ # Warehouse-Gtk
+# windowrule = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
+# windowrule = opacity 0.80 0.80,class:^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
+# windowrule = opacity 0.80 0.80,class:^(hu.kramo.Cartridges)$ # Cartridges-Gtk
+# windowrule = opacity 0.80 0.80,class:^(com.obsproject.Studio)$ # Obs-Qt
+# windowrule = opacity 0.80 0.80,class:^(gnome-boxes)$ # Boxes-Gtk
+# windowrule = opacity 0.80 0.80,class:^(vesktop)$ # Vesktop
+# windowrule = opacity 0.80 0.80,class:^(discord)$ # Discord-Electron
+# windowrule = opacity 0.80 0.80,class:^(WebCord)$ # WebCord-Electron
+# windowrule = opacity 0.80 0.80,class:^(ArmCord)$ # ArmCord-Electron
+# windowrule = opacity 0.80 0.80,class:^(app.drey.Warp)$ # Warp-Gtk
+# windowrule = opacity 0.80 0.80,class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
+# windowrule = opacity 0.80 0.80,class:^(yad)$ # Protontricks-Gtk
+# windowrule = opacity 0.80 0.80,class:^(Signal)$ # Signal-Gtk
+# windowrule = opacity 0.80 0.80,class:^(io.github.alainm23.planify)$ # planify-Gtk
+# windowrule = opacity 0.80 0.80,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
+# windowrule = opacity 0.80 0.80,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gtk
+# windowrule = opacity 0.80 0.80,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
+# windowrule = opacity 0.80 0.80,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
+# windowrule = opacity 0.80 0.80,class:^(io.github.flattool.Warehouse)$ # Warehouse-Gtk
 
-windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Progress Dialog — Dolphin)$
-windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Copying — Dolphin)$
-windowrulev2 = float,title:^(About Mozilla Firefox)$
-windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
-windowrulev2 = float,class:^(firefox)$,title:^(Library)$
-windowrulev2 = float,class:^(kitty)$,title:^(top)$
-windowrulev2 = float,class:^(kitty)$,title:^(btop)$
-windowrulev2 = float,class:^(kitty)$,title:^(htop)$
-windowrulev2 = float,class:^(vlc)$
-windowrulev2 = float,class:^(kvantummanager)$
-windowrulev2 = float,class:^(qt5ct)$
-windowrulev2 = float,class:^(qt6ct)$
-windowrulev2 = float,class:^(nwg-look)$
-windowrulev2 = float,class:^(org.kde.ark)$
-windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float,class:^(blueman-manager)$
-windowrulev2 = float,class:^(nm-applet)$
-windowrulev2 = float,class:^(nm-connection-editor)$
-windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrule = float,class:^(org.kde.dolphin)$,title:^(Progress Dialog — Dolphin)$
+windowrule = float,class:^(org.kde.dolphin)$,title:^(Copying — Dolphin)$
+windowrule = float,title:^(About Mozilla Firefox)$
+windowrule = float,class:^(firefox)$,title:^(Picture-in-Picture)$
+windowrule = float,class:^(firefox)$,title:^(Library)$
+windowrule = float,class:^(kitty)$,title:^(top)$
+windowrule = float,class:^(kitty)$,title:^(btop)$
+windowrule = float,class:^(kitty)$,title:^(htop)$
+windowrule = float,class:^(vlc)$
+windowrule = float,class:^(kvantummanager)$
+windowrule = float,class:^(qt5ct)$
+windowrule = float,class:^(qt6ct)$
+windowrule = float,class:^(nwg-look)$
+windowrule = float,class:^(org.kde.ark)$
+windowrule = float,class:^(org.pulseaudio.pavucontrol)$
+windowrule = float,class:^(blueman-manager)$
+windowrule = float,class:^(nm-applet)$
+windowrule = float,class:^(nm-connection-editor)$
+windowrule = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 
-windowrulev2 = float,class:^(Signal)$ # Signal-Gtk
-windowrulev2 = float,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
-windowrulev2 = float,class:^(app.drey.Warp)$ # Warp-Gtk
-windowrulev2 = float,class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
-windowrulev2 = float,class:^(yad)$ # Protontricks-Gtk
-windowrulev2 = float,class:^(eog)$ # Imageviewer-Gtk
-windowrulev2 = float,class:^(io.github.alainm23.planify)$ # planify-Gtk
-windowrulev2 = float,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
-windowrulev2 = float,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gkk
-windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
-windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
-windowrulev2 = float,class:^(Qemu-system-i386)$ # QEMU x86
+windowrule = float,class:^(Signal)$ # Signal-Gtk
+windowrule = float,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
+windowrule = float,class:^(app.drey.Warp)$ # Warp-Gtk
+windowrule = float,class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
+windowrule = float,class:^(yad)$ # Protontricks-Gtk
+windowrule = float,class:^(eog)$ # Imageviewer-Gtk
+windowrule = float,class:^(io.github.alainm23.planify)$ # planify-Gtk
+windowrule = float,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
+windowrule = float,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gkk
+windowrule = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
+windowrule = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
+windowrule = float,class:^(Qemu-system-i386)$ # QEMU x86
+windowrule = float,class:^(qemu)$ # QEMU x86
 
 # Special workspace rules
 # -> Discord
-windowrulev2 = group set,class:^(discord)$
-windowrulev2 = workspace special,class:^(discord)$
+windowrule = group set,class:^(discord)$
+windowrule = workspace special,class:^(discord)$
 # -> Element
-windowrulev2 = group set always, class:^(cinny)$
-windowrulev2 = workspace special, class:^(cinny)$
+windowrule = group set always, class:^(cinny)$
+windowrule = workspace special, class:^(cinny)$
 # -> Signal
-windowrulev2 = tile,class:^(Signal)$
-windowrulev2 = group set,class:^(Signal)$
-windowrulev2 = workspace special,class:^(Signal)$
+windowrule = tile,class:^(Signal)$
+windowrule = group set,class:^(Signal)$
+windowrule = workspace special,class:^(Signal)$
 # -> Spotify
-windowrulev2 = group set,class:^(Spotify)$
-windowrulev2 = workspace special,class:^(Spotify)$
+windowrule = group set,class:^(Spotify)$
+windowrule = workspace special,class:^(Spotify)$
 # -> Heynote
-windowrulev2 = group set,class:^(Heynote)$
-windowrulev2 = workspace special,class:^(Heynote)$
+windowrule = group set,class:^(Heynote)$
+windowrule = workspace special,class:^(Heynote)$
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
