feat(hyprland): add keybinding for `hyprctl dispatch toggleswallow`

--- a/home/private_dot_config/hypr/keybindings.conf
+++ b/home/private_dot_config/hypr/keybindings.conf
@@ -27,6 +27,7 @@ bind = $mainMod, T, exec, hyprctl dispatch dpms off # blank screen
 bind = $mainMod+Shift, F, exec, $scrPath/windowpin.sh # toggle pin on focused window
 bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
 bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar
+bind = $mainMod, R, exec, hyprctl dispatch toggleswallow
 
 # Application shortcuts
 bind = $mainMod, return, exec, $term # launch terminal emulator
