--- a/home/private_dot_config/hypr/keybindings.conf
+++ b/home/private_dot_config/hypr/keybindings.conf
@@ -171,3 +171,6 @@ bind = $mainMod+Alt, agrave, movetoworkspacesilent, 10
 
 # Trigger when the switch is turning off
 # bindl= , switch:on:Lid Switch, exec, systemctl suspend
+
+# Gestures
+gesture = 3, horizontal, workspace
