--- a/home/private_dot_config/hypr/keybindings.conf
+++ b/home/private_dot_config/hypr/keybindings.conf
@@ -37,9 +37,7 @@ bind = $mainMod, F, exec, $browser # launch web browser
 bind = Ctrl+Shift, Escape, exec, $scrPath/sysmonlaunch.sh # launch system monitor (htop/btop or fallback to top)
 
 # Rofi menus
-bind = $mainMod, A, exec, pkill -x anyrun || SHELL=$HOME/.config/anyrun/shell.sh anyrun # launch application launcher
-bind = $mainMod, Tab, exec, pkill -x rofi || $scrPath/rofilaunch.sh w # launch window switcher
-bind = $mainMod+Shift, E, exec, pkill -x rofi || $scrPath/rofilaunch.sh f # launch file explorer
+bind = $mainMod, A, exec, pkill -x fuzzel || fuzzel # launch application launcher
 
 # Audio control
 bindl  = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle # toggle audio mute
