--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -14,7 +14,6 @@ monitor = ,preferred,auto,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-# exec-once = $scrPath/resetxdgportal.sh # reset XDPH for screenshare
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 exec-once = dbus-update-activation-environment --systemd --all # for XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
@@ -28,9 +27,7 @@ exec-once = nm-applet --indicator # systray app for Network/Wifi
 exec-once = kanata -q # start the keyboard daemon
 exec-once = dunst # start notification demon
 exec-once = kanshi # start the dynamic display configuration daemon
-# exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
-# exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
-# exec-once = $scrPath/batterynotify.sh # battery notification
+exec-once = batsignal # battery notifications
 
 
 # █▀▀ █▄░█ █░█
